Bootstrap Assignment/Assignment 3 - Bootstrap Webpage Layout/src/CSS/style.css
.scroll-up {
    position: fixed;
    right: 15px;
    bottom: 15px;
    background-color: rgba(33, 37, 41, 0.8);
    width: 30px;
    color: #fff;
    height: 30px;
    text-align: center;
}

.social-image {
    background-color: rgba(33, 37, 41, 0.8);
}

a {
    text-decoration: none;
}

*,
 ::after,
 ::before {
    box-sizing: border-box;
}

.thumbnail {
    width: 60px !important;
    height: 60px;
}

.border-left-light {
    border-left: none;
}

.shape-circle {
    border-radius: 50% !important;
}

.alignment-container {
    height: 80px;
    position: relative;
}

.vertical-center {
    width: 100%;
    margin: 0;
    position: absolute;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
}

.footer-legalinfo {
    background-color: black;
}

@media screen and (max-width:575px) {
    .fluid-text {
        text-align: center;
    }
}

@media screen and (min-width:768px) {
    .border-left-light {
        border-left: 1px solid #ccc;
    }
}

